# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.26 2004/12/15 00:31:42 hadfield Exp $

13 Dec 2004; Scott Hadfield <hadfield@gentoo.org>:
 * Total rewrite of the template module. This should hopefully make debugging
   leaps and bounds easier. It should also speed up processing time and make
   the class much more flexible. Note that this rewrite should be fully
   compatible with the old templates.
 * Added the ability to add comments to templates. Put comments within {* *}.
 * Bug and formatting fixes on the page dispatcher (index.py)
 * Small bug fix in User.py (calling self in the global area of the class)
 * Added uid to the header output (index.py)
 * Added a 'RecentSub' function to Script.py to return the most recent
   subscript.
  
18 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Login fixes (redirect on login/logout)

14 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * offset for the error report list
 * Print to the top of the error report log

12 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Form fixes
 * Bug fixes
 * New feature to optimize MySQL tables

10 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Added a timeout check to wait_threads()
 * Added a HeaderTmplSent bool to the State module
 * Moved HTMLHeadersSent into the State module
 * Bug fixes

09 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Implemented a basic threading class
 * Threaded loading of page modules

07 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Basic access control for the admin section.
 * Minor fixes
 * Added 'warn' type to logwrite()

06 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Fixed dynamic module loading in the index file (NOTE: This method
   assigns the class object to the module name, not the module object to
   module name.)
 * admin/Page_Main.py converted to the new style
 * Updated URLs in the admin header

05 Nov 2004; Ian Leitch <port001@gentoo.org>: