@@ -2,7 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.26 2004/12/15 00:31:42 hadfield Exp $
+# $Id: ChangeLog,v 1.27 2004/12/15 15:22:45 port001 Exp $
+
+15 Dec 2004; Ian Leitch <port001@gentoo.org>:
+ * Tiny fix in index.py
+ * Added missing entry for state table in pym/Config.py
 
 13 Dec 2004; Scott Hadfield <hadfield@gentoo.org>:
  * Total rewrite of the template module. This should hopefully make debugging
